--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,7 +36,7 @@ nav:
   - Basic:
     - Git: git.md
     - Markdown & HTML5 (TODO): markdown-html5.md
-    - YAML (TODO): yaml.md
+    - YAML: yaml.md
     - Python: python.md
     - C / C++: c-cpp.md
     - Matlab (EN): matlab-en.md
