--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,7 +35,7 @@ nav:
   - Home Page: index.md
   - Basic:
     - Git: git.md
-    - Markdown & HTML5 (TODO): markdown-html5.md
+    - HTML5 & CSS & Markdown: html5.md
     - YAML: yaml.md
     - Python: python.md
     - C / C++: c-cpp.md
